subreddit: work on navigation

--- a/src/ui/feature/subreddit/SubredditNavigation.pug
+++ b/src/ui/feature/subreddit/SubredditNavigation.pug
@@ -1,7 +1,7 @@
 script.
 	import api from '../../../api/index.js'
 	import { relativize_url } from '../../app/routing/url.coffee'
-	import FeedAvatar from '../feed/FeedAvatar.pug'
+	import SubredditAvatar from './SubredditAvatar.pug'
 	
 	export subreddit_name = null
 
@@ -12,23 +12,51 @@ script.
 	)
 
 nav.subreddit-navigation
-	FeedAvatar(type='subreddit' subreddit_name={subreddit_name})
-	{#if subreddit_custom_menu}
-		{#each subreddit_custom_menu as item}
-			{#if item.children}
-				details.subreddit-navigation-custom-menu-item
-					summary {item.text}
-					ol.subreddit-navigation-custom-menu-dropdown
-						{#each item.children as child}
-							a(href={relativize_url(child.url)}) {child.text}
-			{:else}
-				a.subreddit-navigation-custom-menu-item(href={relativize_url(item.url)}) {item.text}
+	SubredditAvatar(name={subreddit_name} size='large')
+	menu.subreddit-navigation-options
+		a(href='/') About
+		a(href='/') Rules
+		a(href='/') Posts
+		a(href='/') Wiki
+	a.back-link(href='/{subreddit_name}') ←
+	a.next-link(href='') ↓
+	{#if false}
+		{#if subreddit_custom_menu}
+			{#each subreddit_custom_menu as item}
+				{#if item.children}
+					details.subreddit-navigation-custom-menu-item
+						summary {item.text}
+						ol.subreddit-navigation-custom-menu-dropdown
+							{#each item.children as child}
+								a(href={relativize_url(child.url)}) {child.text}
+				{:else}
+					a.subreddit-navigation-custom-menu-item(href={relativize_url(item.url)}) {item.text}
 
 style.
+	.back-link
+		border-right 1px solid
+		color var(--c-text-faint)
+		align-items center
+		display flex
+		justify-content center
+		flex 1 1 auto
+		font-size 2em
+		writing-mode initial
+	.next-link
+		border-right 1px solid
+		color var(--c-text-faint)
+		align-items center
+		display flex
+		justify-content center
+		flex 0 0 20vh
+		font-size 2em
+		writing-mode initial
 	.subreddit-navigation
+		align-items center
 		box-sizing content-box
 		display flex
 		gap 2em
+		height 100vh
 		width 64px
 		writing-mode vertical-rl
 	.subreddit-navigation-custom-menu-dropdown
@@ -41,3 +69,7 @@ style.
 	.subreddit-navigation-custom-menu-item
 		padding-right 34px
 		white-space pre
+	.subreddit-navigation-options
+		color var(--c-text-weak)
+		display flex
+		gap 1em
