--- a/src/ui/feature/feed/Feed.pug
+++ b/src/ui/feature/feed/Feed.pug
@@ -1,13 +1,15 @@
 script.
+	import { getContext } from 'svelte'
 	import api from '../../../api/index.js'
+	import { format_url } from '../../app/routing/url.coffee'
 	
 	import StatTracker from '../../common/StatTracker.coffee'
 	import Button from '../../common/Button.pug'
+	import ButtonGroup from '../../common/ButtonGroup.pug'
 	import Label from '../../common/Label.pug'
-
+	import TextInput from '../../common/TextInput.pug'
 	import PostLink from '../post/PostLink.pug'
 	import SubredditSidebar from '../subreddit/SubredditSidebar.pug'
-	import FeedPostListControls from './FeedPostListControls.pug'
 
 	export collection_id = null
 	export multireddit_name = null
@@ -18,6 +20,30 @@ script.
 	export time_range = null
 	export type = null
 	export user_name = null
+	
+	filter_options = [
+		{ label: 'Unread', value: 'unread' }
+		{ label: 'All', value: 'all' }
+	]
+	time_range_options = [
+		{ label: 'Any time', value: 'all' }
+		{ label: 'Y', value: 'year' }
+		{ label: 'M', value: 'month' }
+		{ label: 'W', value: 'week' }
+		{ label: 'D', value: 'day' }
+		{ label: 'H', value: 'hour' }
+	]
+	sort_options = [
+		{ label: 'New', show_time_ranges: false, value: 'new' }
+		{ label: 'Hot', show_time_ranges: false, value: 'hot' }
+		{ label: 'Top', show_time_ranges: true, value: 'top' }
+	]
+	search_sort_options = [
+		{ label: 'Match %', value: 'relevance' }
+		{ label: 'Score', value: 'top' }
+		{ label: 'Date', value: 'new' }
+		{ label: 'Num. Comments', value: 'comments' }
+	]
 
 	base_page_id = switch type
 		when 'collection'
@@ -38,7 +64,18 @@ script.
 	has_next_page = false
 	loading = null
 	ids = []
+	internal_navigate = getContext('internal_navigate') # would prefer not to need this, but browsers don't support <a> in <select>
+	local_filter = 'unread'
+	local_search_query = search_query
+	local_sort = sort
+	local_time_range = time_range
+	search_mode_active = search_query?
 	read = []
+
+	activate_search_mode = ->
+		local_time_range = 'all'
+		local_sort = 'relevance'
+		search_mode_active = true
 
 	load_next_page = ->
 		after_id = ids.at(-1)
@@ -70,19 +107,30 @@ svelte:head
 		title {user_name}
 nav.feed
 	{#if type !== 'collection'}
-		FeedPostListControls(feed_type={type} multireddit_name={multireddit_name} subreddit_name={subreddit_name} user_name={user_name} search_query={search_query} sort={sort} time_range={time_range})
+		menu.feed-controls
+			{#if search_mode_active}
+				TextInput(initial_value={search_query} type_action={value => local_search_query = value})
+				Button(action={value => local_sort = value} options={search_sort_options} selected={local_sort})
+				Button(action={value => local_time_range = value} options={time_range_options} selected={local_time_range})
+				Button(disabled={!local_search_query?.length} key='Enter' link={format_url({ feed_search_query: local_search_query, feed_sort: local_sort, feed_time_range: local_time_range, feed_type: type, multireddit_name, subreddit_name, user_name })} text='Search')
+			{:else}
+				ButtonGroup(options={sort_options.map(x => ({ ...x, link: format_url({ feed_sort: x.value, feed_time_range: time_range, feed_type: type, multireddit_name, subreddit_name, user_name })}))} selected={sort})
+				{#if sort_options.find(x => x.value === sort)?.show_time_ranges}
+					Button(action={value => internal_navigate({ href: location.origin + format_url({ feed_sort: sort, feed_time_range: value, feed_type: type, multireddit_name, subreddit_name, user_name }) })} options={time_range_options} selected={time_range})
+				Button(action={activate_search_mode} text='Search...')
+				ButtonGroup(action={value => local_filter = value} options={filter_options} selected={local_filter})
 	{#if loading}
 		.feed-loading-notification Loading...
 	{:else}
 		{#if type === 'collection' || type === 'multireddit' || type === 'subreddit' || type === 'user'}
 			{#if ids.length === 0}
 				.feed-post-list-empty No posts.
-			{:else if !search_query && read.every((x) => x === true)}
+			{:else if !search_query && local_filter === 'unread' && read.every((x) => x === true)}
 				.feed-post-list-no-unreads You've read all the posts on this page.
 			{:else}
 				ol.feed-post-list
 					{#each ids as post_id, i (post_id)}
-						{#if !search_query && !read[i]}
+						{#if search_query || local_filter === 'all' || (local_filter === 'unread' && !read[i])}
 							PostLink(post_id={post_id} show_subreddit={type !== 'subreddit'})
 	menu.feed-post-list-actions
 		{#if has_next_page}
@@ -98,6 +146,9 @@ style.
 		flex-flow column nowrap
 		gap 1em
 		width 240px
+	.feed-controls
+		display flex
+		gap 6px
 	.feed-post-list
 		display flex
 		flex-flow column nowrap
