--- a/src/ui/feature/post/PostComments.pug
+++ b/src/ui/feature/post/PostComments.pug
@@ -26,21 +26,28 @@ script.
 			)
 	)
 
-ol
-	{#if post}
-		{#each post.replies as reply_id (reply_id)}
-			Comment(id={reply_id})
-		{#if post.num_more_replies > 0}
-			.post-more-replies
-				Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} more")
-	{:else if loading}
-		.post-comments-loading-notification Loading...
+{#if post}
+	{#if !post.replies.length}
+		.post-comments-empty-notification [ No comments. ]
+	{:else}
+		ol
+			{#each post.replies as reply_id (reply_id)}
+				Comment(id={reply_id})
+			{#if post.num_more_replies > 0}
+				.post-more-replies
+					Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} more")
+{:else if loading}
+	.post-comments-loading-notification Loading...
 
 style.
 	ol
 		margin 0.666em 0
+		margin-left -1em
+	.post-comments-empty-notification
+		color var(--c-text-weak)
+		padding 0.666em 0
 	.post-comments-loading-notification
 		color var(--c-text-weak)
-		padding 1em 0
-	.post-more-replies
 		padding 0.666em 0
+	.post-more-replies
+		padding 0.666em 1em
